--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+  
 <head>
+  <!-- Primary Meta Tags -->
+<title>Portafolio Figma</title>
+<meta name="title" content="Portafolio Figma">
+<meta name="description" content="an edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://reto-figma-lfjj.vercel.app/">
+<meta property="og:title" content="Portafolio Figma">
+<meta property="og:description" content="and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="og:image" content="https://i.postimg.cc/QNKRWs3y/figma.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://reto-figma-lfjj.vercel.app/">
+<meta property="twitter:title" content="Portafolio Figma">
+<meta property="twitter:description" content="dit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="twitter:image" content="https://i.postimg.cc/QNKRWs3y/figma.jpg">
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="Style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
