--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://reto-figma-lfjj.vercel.app/">
+<meta property="og:url" content="https://reto-figma.vercel.app/">
 <meta property="og:title" content="Portafolio Figma">
 <meta property="og:description" content="and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
 <meta property="og:image" content="https://i.postimg.cc/QNKRWs3y/figma.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://reto-figma-lfjj.vercel.app/">
+<meta property="twitter:url" content="https://reto-figma.vercel.app/">
 <meta property="twitter:title" content="Portafolio Figma">
 <meta property="twitter:description" content="dit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
 <meta property="twitter:image" content="https://i.postimg.cc/QNKRWs3y/figma.jpg">
